deployment/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: node-deployment
spec:
  selector:
    matchLabels:
      app: node-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: node-deployment
    spec:
      containers:
      - name: node
        image: docker165/sixthlab_web
        ports:
        - containerPort: 3001
