deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node-deployment
  ports:
    - protocol: TCP
      port: 3001
